// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test for GifExpertApp should match snapshot 1`] = `
<Fragment>
  <h2>
    Gif Expert App
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`Test for GifExpertApp should show a list of categories 1`] = `
<Fragment>
  <h2>
    Gif Expert App
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Keylor"
      key="Keylor"
    />
    <GifGrid
      category="Neuer"
      key="Neuer"
    />
  </ol>
</Fragment>
`;
